fix: table option z-index

--- a/src/app/components/default-table/default-table.component.scss
+++ b/src/app/components/default-table/default-table.component.scss
@@ -127,7 +127,7 @@
                     border: 1px solid #e0e0e0;
                     border-radius: 5px;
                     padding: 8px;
-                    z-index: 10;
+                    z-index: 10000;
                     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
                     gap: 8px;
                     
